========================================
    ~~VERSION~~ -- ~~DATE~~
========================================

With this release we have significantly reorganized and updated Aspen's
documentation. This sets the stage for magic removal, when we decouple the
handler infrastructure (relegating it to an application), and otherwise make
Aspen friendlier for the pure-application use case.

    - Removed doc references to lib537/mode [issue 99]

    - Added documentation on Aspen's apps, handlers, and rules [issue 61].

    - Now easier to configure/unconfigure from 3rd-party tools [issue 77].

    - All config files now documented under UI > Config Files [issue 91].


========================================
    0.7.1 -- March 1, 2007
========================================

This is a minor release, with both bug-fixes and feature enhancements.

    - Started to refactor into an apps subpackage, to contain framework glue
      and the handler infrastructure.

    - Now providing better feedback on exit [issue 87].

    - Now tidier with our pidfile [issue 87].

    - Fixed heinous bug in static file serving on Windows [issue 92].

    - Upgraded to CherryPyWSGIServer from CherryPy 3.0.1 [issue 88, 81?].

    - Downstream errors triggered in conf files now propagate more transparently
      through colonize().

    - Exposed HTTP version to configuration [issue 88].

    - Commandeered the outbound Server header.

    - Started doc/ACKNOWLEDGMENTS.

    - Started fine-grained tracking in doc/HISTORY.


========================================
    0.7 -- January 15, 2007
========================================

The focus of this release is configuration. We have cleaned up and documented
Aspen's main configuration file, and we have exposed a documented interface for
interacting with Aspen's configuration from your plugin modules. There is one
API change to note: Aspen no longer instantiates plugin classes; instead, you